test_report.txt

> starter_helpi@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/starter_helpi/starter_helpi/node_modules/axios/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import axios from './lib/axios.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      1 | // Taken from chatgpt and edited to allow for custom questions and apikey inputs
    > 2 | import axios from "axios";
        | ^
      3 |
      4 | const API_URL = 'https://api.openai.com/v1/chat/completions';
      5 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/chatGpt.ts:2:1)
      at Object.<anonymous> (src/gptResponse.tsx:2:1)
      at Object.<anonymous> (src/resultPage.tsx:1:1)
      at Object.<anonymous> (src/App.tsx:9:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

[0;33mOne of your dependencies, babel-preset-react-app, is importing the
"@babel/plugin-proposal-private-property-in-object" package without
declaring it in its dependencies. This is currently working because
"@babel/plugin-proposal-private-property-in-object" is already in your
node_modules folder for unrelated reasons, but it [1mmay break at any time[0;33m.

babel-preset-react-app is part of the create-react-app project, [1mwhich
is not maintianed anymore[0;33m. It is thus unlikely that this bug will
ever be fixed. Add "@babel/plugin-proposal-private-property-in-object" to
your devDependencies to work around this error. This will make this message
go away.[0m
  
---------------------|---------|----------|---------|---------|-------------------
File                 | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
---------------------|---------|----------|---------|---------|-------------------
All files            |       0 |        0 |       0 |       0 |                   
 src                 |       0 |        0 |       0 |       0 |                   
  App.tsx            |       0 |        0 |       0 |       0 | 14-114            
  LoginForm.tsx      |       0 |        0 |       0 |       0 | 33-260            
  basicCareer.tsx    |       0 |        0 |       0 |       0 | 48-354            
  chatGpt.ts         |       0 |        0 |       0 |       0 | 4-34              
  db.tsx             |       0 |        0 |       0 |       0 | 7-21              
  detailedCareer.tsx |       0 |        0 |       0 |       0 | 29-229            
  gptResponse.tsx    |       0 |        0 |       0 |       0 | 18-104            
  header.tsx         |       0 |        0 |       0 |       0 | 24-79             
  home.tsx           |       0 |      100 |       0 |       0 | 25                
  homeBackground.tsx |       0 |        0 |       0 |       0 | 12-87             
  homepagelogo.tsx   |       0 |        0 |       0 |       0 | 32-576            
  index.tsx          |       0 |      100 |     100 |       0 | 7-19              
  interface.tsx      |       0 |        0 |       0 |       0 | 19-102            
  notification.tsx   |       0 |        0 |       0 |       0 | 23-83             
  reportWebVitals.ts |       0 |        0 |       0 |       0 | 3-10              
  resultPage.tsx     |       0 |        0 |       0 |       0 | 18-27             
 src/CSS             |       0 |      100 |     100 |       0 |                   
  Border.tsx         |       0 |      100 |     100 |       0 | 3                 
  Center.tsx         |       0 |      100 |     100 |       0 | 3                 
  Heading.tsx        |       0 |      100 |     100 |       0 | 3                 
---------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        5.59 s
Ran all test suites.
